--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Foody Guy-Wlocome to our  Website </title>
+  <title>Foody-Wlocome to our  Website </title>
   <link rel="shortcut icon" href="/logo.jpg" type="image/x-icon">
 </head>
 
